// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReportList /> Render loading 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="report-list"
  >
    <div
      className="report-list__message"
    >
      <span
        className=""
      >
        <i
          aria-hidden="true"
          className="fa fa-spinner fa-spin"
        />
         
        Loading...
      </span>
    </div>
  </div>
</div>
`;

exports[`<ReportList /> Render with data 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="report-list"
  >
    <ul
      className="report-list__list media-list"
    >
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="xy_scatter-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/xy_scatter.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Chart View: Systolic vs Diastolic
            </a>
          </h4>
          <p
            className="report-list-item__person"
          >
            Created by: 
            Vader
          </p>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="xy_line-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/xy_line.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Scatter: Systolic vs Diastolic
            </a>
          </h4>
          <p
            className="report-list-item__person"
          >
            Created by: 
            Vader
          </p>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="xy_line-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/xy_line.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Time Chart: Body Temp + Pulse For Group 2
            </a>
          </h4>
          <p
            className="report-list-item__person"
          >
            Created by: 
            Vader
          </p>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Abbreviated Demographics
            </a>
          </h4>
          <p
            className="report-list-item__person"
          >
            Created by: 
            Vader
          </p>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Alt ID mapping
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              APX-1: Abbreviated Physical Exam
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            className="report-list-item__icon"
            src="crosstab.png?revision=3"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Crosstab: MouseId Counts
            </a>
          </h4>
          <p
            className="report-list-item__person"
          >
            Created by: 
            Vader
          </p>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              DEM-1: Demographics
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              FPX-1: Final Complete Physical Exam
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              PRE-1: Pre-Existing Conditions
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            className="report-list-item__icon"
            src="/r_logo.svg?revision=3"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              R Report: Dataset Column Names
            </a>
          </h4>
          <p
            className="report-list-item__person"
          >
            Created by: 
            Vader
          </p>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              RCP-1: Reactogenicity-Resolution
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              SCL-1: Specimen Collection
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Types
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              VAC-1: Post-enrollment Vaccination
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              verifyAssay
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              AE-1:(VTN) AE Log
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Chemistry + Criteria + Demographics
            </a>
          </h4>
          <p
            className="report-list-item__person"
          >
            Created by: 
            Vader
          </p>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              CM-1:(Ph I/II) Concomitant Medications Log
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              CPS-1: Screening Chemistry Panel
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              ECI-1: Eligibility Criteria
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              ESI-1: End of Study Inventory
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              IHT-1:  Interim HIV Test
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              IV-1:Interim Visit
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              PIL-1: Participant Incident Log
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              SIA-1: Social Impact Assessment
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              SIL-1: Social Impact Log
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              CPF-1: Follow-up Chemistry Panel
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              LLF-1: Follow-up Local Lab Results (Page 1)
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              LLS-1: Screening Local Lab Results (Page 1)
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              LLS-2: Screening Local Lab Results (Page 2)
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              MV-1: Missed Visit
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              PRC-1: Participant Receipt
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              PT-1: Participant Transfer
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              URF-1: Follow-up Urinalysis (Page 1)
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              URF-2: Follow-up Urinalysis (Page 2)
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              URS-1: Screening Urinalysis
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              BRA-1: Behavioral Risk Assessment (Page 1)
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              BRA-2: Behavioral Risk Assessment (Page 2)
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              DOV-1: Discontinuation of Vaccination
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              OTB-1: Outside Testing/Belief
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Quality Control Report
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              RCB-1: Reactogenicity-Baseline
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              RCE-1: Reactogenicity-Day 0
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              RCM-1: Reactogenicity-Early Assessment
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              SP-1: Study Product Admin. Error
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              TM-1: Termination
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              ENR-1: Enrollment
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              EPX-1: Enrollment Abbreviated Physical Exam
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              EVC-1: Enrollment Vaccination
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              PO-1: Pregnancy Outcome
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              PR-1: Pregnancy Report and History
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              RCF-1: Reactogenicity-Day 2
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              RCH-1: Reactogenicity-Day 1
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            alt="custom_grid-icon"
            className="report-list-item__icon"
            height={null}
            src="/labkey/_images/custom_grid.svg"
            width="100%"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              RCT-1: Reactogenicity-Day 3
            </a>
          </h4>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <span
            className="report-list-item__icon fa fa-clipboard fa-4x"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              href="/labkey/StudyVerifyProject/My%20Study/reports-runReport.view?reportId=db%3A949&redirectUrl=%2Flabkey%2FStudyVerifyProject%2FMy%2520Study%2Fproject-begin.view%3FpageId%3Dstudy.DATA_ANALYSIS"
              onClick={[Function]}
            >
              Mouse Report: 2 Dem Vars + 3 Other Vars
            </a>
          </h4>
          <p
            className="report-list-item__person"
          >
            Created by: 
            Vader
          </p>
        </div>
      </li>
      <li
        className="report-list-item media"
        onClick={[Function]}
      >
        <div
          className="media-left"
        >
          <img
            className="report-list-item__icon"
            src="/r_logo.svg?revision=3"
          />
        </div>
        <div
          className="media-body"
        >
          <h4
            className="report-list-item__name media-heading"
          >
            <a
              href="/labkey/StudyVerifyProject/My%20Study/reports-runReport.view?reportId=db%3A955&redirectUrl=%2Flabkey%2FStudyVerifyProject%2FMy%2520Study%2Fproject-begin.view%3FpageId%3Dstudy.DATA_ANALYSIS"
              onClick={[Function]}
            >
              TestReport
            </a>
          </h4>
          <p
            className="report-list-item__person"
          >
            Created by: 
            Vader
          </p>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<ReportList /> Render with no data 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="report-list"
  >
    <div
      className="report-list__message"
    >
      No reports.
    </div>
  </div>
</div>
`;

exports[`<ReportListItem /> ReportListItem renders 1`] = `
<li
  className="report-list-item media"
  onClick={[Function]}
>
  <div
    className="media-left"
  >
    <img
      alt="xy_scatter-icon"
      className="report-list-item__icon"
      height={null}
      src="/labkey/_images/xy_scatter.svg"
      width="100%"
    />
  </div>
  <div
    className="media-body"
  >
    <h4
      className="report-list-item__name media-heading"
    >
      <a
        href="/q/study/apx-1"
        onClick={[Function]}
        style={Object {}}
      >
        Chart View: Systolic vs Diastolic
      </a>
    </h4>
    <p
      className="report-list-item__person"
    >
      Created by: 
      Vader
    </p>
  </div>
</li>
`;
